--- a/Bintang/bintang.html
+++ b/Bintang/bintang.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<!-- <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,4 +9,4 @@
     <div id="output"></div>
     <script src="bintang.js"></script>
 </body>
-</html>
+</html> -->
